--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@planetscale/database": "^1.7.0",
     "daisyui": "^2.51.5",
     "next": "^13.2.4",
     "react": "18.2.0",
