--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.1.0-dev.20230423"
   },
   "ct3aMetadata": {
     "initVersion": "7.12.0"
