--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-image-gallery": "^1.2.11",
+    "server-only": "^0.0.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
